src/main/k8s/hw2/003_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw-deployment
  namespace: hw
  labels:
    app: hw2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hw2
  template:
    metadata:
      labels:
        app: hw2
    spec:
      containers:
      - name: hw2-0-0
        image: vasilychurkin/otus_arch_hw:v2.0.4
        ports:
        - containerPort: 8080
          name: web
