src/main/k8s/hw2/013_pg_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: hw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:13.7
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgredb
              mountPath: /var/lib/postgresql/data
            - name: pg-secret
              mountPath: /etc/pg
              readOnly: true
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgres-pv-claim
        - name: pg-secret
          secret:
            secretName: postgres-secret
