src/main/k8s/hw2/004_Service.yml
apiVersion: v1
kind: Service
metadata:
  name: hw-svc
  namespace: hw
spec:
  selector:
    app: hw2
  ports:
  - protocol: TCP
    port: 8000
    targetPort: web
    name: hw-port
  type: NodePort
