src/main/k8s/hw2/014_pg_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: hw
  labels:
    app: postgres
spec:
  type: LoadBalancer
  ports:
   - port: 5432
     protocol: TCP
  selector:
   app: postgres
