src/main/k8s/hw2/005_Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw2-ingress
  namespace: hw
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: arch.homework
    http:
      paths:
        - path: /health
          pathType: Prefix
          backend:
            service:
              name: hw-svc
              port:
                number: 8000
        - path: /api($|/)(.*)
          pathType: Prefix
          backend:
            service:
              name: hw-svc
              port:
                number: 8000
